force-app/main/default/objects/Game__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of lifeforms along the Z axis</description>
    <label>Depth</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>