force-app/main/default/objects/Game__c/fields/Refresh_Rate__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Rate__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of 100 miliseconds per update</description>
    <inlineHelpText>100 miliseconds</inlineHelpText>
    <label>Refresh Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>