force-app/main/default/objects/Game__c/fields/Saved_State__c.field-meta.xml
<CustomField>
    <fullName>Saved_State__c</fullName>
    <description>Live state of the X by Y by Z array of lifeforms</description>
    <label>Saved State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>