force-app/main/default/objects/Game__c/fields/Wdith__c.field-meta.xml
<CustomField>
    <fullName>Wdith__c</fullName>
    <description>number of lifeforms along X axis</description>
    <label>Wdith</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>